# icp_collateral

./: ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  DOCUMENTATION.md  README.md  dfx.json  package-lock.json  package.json  test_script.sh
src/icp_collateral_backend/: Cargo.toml  icp_collateral_backend.did
src/icp_collateral_backend/src/: lib.rs
src/icp_collateral_frontend/: package.json
src/icp_collateral_frontend/src/: App.js
src/mock_tokens/: Cargo.toml  mock_tokens.did
src/mock_tokens/src/: lib.rs
