[package]
name = "icp_collateral_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11"
serde = { version = "1.0.219", features = ["derive"] }
ic-stable-structures = "0.6"
num-traits = "0.2"
